Shortened exercise 2b