@@ -17,6 +17,6 @@ public class Exercise2b {
    * @returns {double[]} The list in MB
    */
   public static List<Double> convertFilesizes(List<Double> files) {
-    return files.stream().map(x -> x/1000).collect(Collectors.toList());
+    return files.stream().map(x -> x/1000).toList();
   }
 }
